# sentiric-registrar-service

./: Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs  tls.rs
src/data/: store.rs
src/grpc/: client.rs  mod.rs  service.rs
