[package]
name = "sentiric-registrar-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
anyhow = "1.0"
# Hata yönetimi için eklendi
thiserror = "1.0" 
# HTTP Server (Health Check)
hyper = { version = "0.14.28", features = ["full"] } 
# Konfigürasyon
config = "0.14" 
# Redis
redis = { version = "0.25", features = ["tokio-rustls-comp"] }

# --- KRİTİK BAĞIMLILIK ---
[dependencies.sentiric-contracts]
git = "https://github.com/sentiric/sentiric-contracts.git"
tag = "v1.9.0"