[package]
name = "sentiric-registrar-service"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
hyper = { version = "0.14.28", features = ["full"] } 
config = "0.14" 
redis = { version = "0.26", features = ["tokio-rustls-comp"] }
md5 = "0.7"

sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.13.6" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.2.12" }