[package]
name = "sentiric-registrar-service"
version = "1.1.3"
edition = "2021"

[dependencies]
# Async & Network
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Data & Config
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
redis = { version = "0.26", features = ["tokio-rustls-comp"] }

# --- THE IRON CORE ---
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.5.2" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.16.0" }